ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: fastapi-kafka
  annotations:
    kubernetes.io/ingress.class: nginx  # Adjust based on your Ingress Controller
spec:
  rules:
    - host: nest.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nestjs-winston-service
                port:
                  number: 3000
